--- a/MoanaSoftwareTrello/Views/Login/Register.cshtml
+++ b/MoanaSoftwareTrello/Views/Login/Register.cshtml
@@ -1,10 +1,8 @@
 ﻿@model MoanaSoftwareTrello.Models.User
 
 @{
-    ViewData["Title"] = "Login";
-    
+    ViewData["Title"] = "Register";
 }
-
 
 <div id="main-wrapper">
     <div class="container">
@@ -12,10 +10,9 @@
             <div class="col-lg-7 shadow-lg">
                 <div class="hero-wrap d-flex align-items-center rounded-3 hero-right-border-radius h-100">
                     <div class="hero-mask bg-wrap bg-primary"></div>
-                    <div class="hero-bg bg-wrap" style="background-image: url('images/login-bg.jpg');"></div>
+                    <div class="hero-bg bg-wrap" style="background-image: url('/images/login-bg.jpg');"></div>
                     <div class="hero-content mx-auto w-100 h-100 d-flex flex-column">
                         <div class="row g-0">
-
                         </div>
                         <div class="row g-0 my-auto">
                             <div class="col-11 col-lg-10 my-5 mx-auto">
@@ -30,7 +27,7 @@
                 <div class="container my-auto py-5">
                     <div class="row">
                         <div class="col-11 col-lg-10 mx-auto">
-                            <h3 class="text-white text-center mb-4">Sign In</h3>
+                            <h3 class="text-white text-center mb-4">Sign Up</h3>
                             <form asp-action="Index" class="form-dark">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="mb-3">
@@ -42,27 +39,30 @@
                                     <label class="form-label text-light" asp-for="Password">Password</label>
                                     <input asp-for="Password" type="password" class="form-control" required placeholder="Enter Password">
                                     <span asp-validation-for="Password" class="text-danger"></span>
-
                                 </div>
-                                <div class="row mt-4">
-                                    <div class="col-sm text-2 text-end disabled"><a href="#">Forgot Password ?</a></div>
+                                <div class="mb-3 mt-4">
+                                    <div class="form-check text-2">
+                                        <input id="agree" name="agree" class="form-check-input" type="checkbox">
+                                        <label class="form-check-label text-light" for="agree">I agree to the Terms and Privacy Policy.</label>
+                                    </div>
                                 </div>
                                 <div class="d-grid my-4">
-                                    <button class="btn btn-primary" type="submit">Sign In</button>
+                                    <button class="btn btn-primary" type="submit">Sign Up</button>
                                 </div>
                             </form>
                             <div class="d-flex align-items-center my-3">
                                 <hr class="flex-grow-1 bg-dark-4">
                             </div>
-                            <p class="text-2 text-center text-light mb-0">Don't have an account? <a asp-action="Register">Sign Up</a></p>
+                            
+                            <p class="text-2 text-center text-light">Already have an account? <a asp-action="Index">Sign In</a></p>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Login Form End -->
         </div>
     </div>
 </div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
