--- a/MoanaSoftwareTrello/Views/Shared/_Layout.cshtml
+++ b/MoanaSoftwareTrello/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Login">Login</a>
+                        <li class="nav-item"> 
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Login">Login</a>
                         </li>
                     </ul>
                 </div>
