Complete login/register - add login layout - fix jwt storage - add session + timeot 4 hours

--- a/MoanaSoftwareTrello/Views/Home/Index.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/Index.cshtml
@@ -2,8 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="container-fluid">
-    <div class="board">
-        
-    </div>
+
+<div class="row">
+    <div class="col-3 p-1 box-shadow" id="pending">asdf</div>
+    <div class="col-3 p-1" id="in_progress">fdsa</div>
+    <div class="col-3 p-1" id="blocked">dfsf</div>
+    <div class="col-3 p-1" id="done">ff</div>
 </div>
+
