Load Card + dragula css

--- a/MoanaSoftwareTrello/Views/Home/Index.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/Index.cshtml
@@ -4,9 +4,44 @@
 
 
 <div class="row">
-    <div class="col-3 p-1 box-shadow" id="pending">asdf</div>
-    <div class="col-3 p-1" id="in_progress">fdsa</div>
-    <div class="col-3 p-1" id="blocked">dfsf</div>
-    <div class="col-3 p-1" id="done">ff</div>
+    @for (int i = 0; i < Model.status.Length; i++)
+    {
+        @*<span>@Model.status[i] @i</span>*@
+        <div class="col-12 col-md-6 col-lg-3 p-3">
+            <div class="content box-shadow" id="@Model.status[i]">
+                @for (int j = 0; j < Model.cards.Count; j++)
+                {
+                    @if ((int)Model.cards[j].Status == i)
+                    {
+                        <!-- card -->
+                        <div class="card" style="order: @Model.cards[j].Position" id="@Model.cards[j].Id">
+                            <div class="card-body">
+                                <h5 class="card-title">@Model.cards[j].Title</h5>
+                                <p class="card-text">@Model.cards[j].Description</p>
+                                <a href="#" class="card-link">Edit</a>
+                            </div>
+                        </div>
+                        <!-- card -->
+                    }
+                }
+            </div>
+        </div>
+    }
 </div>
 
+@section scripts {
+
+    <script type="text/javascript">
+        @{string statusToDragula ="";}
+        $(document).ready(function () {
+            @foreach (var stat in Model.status)
+        {
+            statusToDragula += stat + ",";
+        }
+            dragula([@statusToDragula]);
+
+        });
+
+    </script>
+
+}                       
