--- a/MoanaSoftwareTrello/Views/Shared/_Layout.cshtml
+++ b/MoanaSoftwareTrello/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - MoanaSoftwareTrello</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dragula.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MoanaSoftwareTrello.styles.css" asp-append-version="true" />
 </head>
 <body>
