--- a/MoanaSoftwareTrello/Views/Home/Index.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-
+<div id="modalLocation"></div>
 <div class="row">
     @for (int i = 0; i < Model.status.Length; i++)
     {
@@ -26,7 +26,7 @@
                         }
                     }
                 </div>
-                <div class="px-2 py-1"><a href="#">Add Card</a></div>
+                <div class="px-2 py-1"><button data-toggle="ajax-modal" data-target="#addCard" data-url="@Url.Action("CreateCard")">Add Card</button></div>
             </div>
         </div>
     }
