#0002 ajax fix reload container

--- a/MoanaSoftwareTrello/Views/Home/Index.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/Index.cshtml
@@ -49,8 +49,8 @@
 
 
         var columns = @Html.Raw(Json.Serialize(Model.status));
-        
-        
+
+        const loadContainerUrl = "@Url.Action("ajaxReloadColumn")";
         const updateCardPosUrl = "@Url.Action("EditCard")";
 
     </script>
