#0004 Add DestroyCard Bugfix ajax refresh

--- a/MoanaSoftwareTrello/Views/Home/Index.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/Index.cshtml
@@ -52,6 +52,7 @@
 
         const loadContainerUrl = "@Url.Action("ajaxReloadColumn")";
         const updateCardPosUrl = "@Url.Action("EditCard")";
+        const destroyCardUrl = "@Url.Action("DeleteCard")";
 
     </script>
     <script src="~/lib/microsoft/signalr/dist/browser/signalr.min.js"></script>
