--- a/MoanaSoftwareTrello/Views/Home/EditCard.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/EditCard.cshtml
@@ -26,7 +26,7 @@
                 </form>
             </div>
             <div class="modal-footer justify-content-between">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+                <button type="button" class="btn btn-danger" data-destroy="modal">Delete</button>
                 <button type="button" class="btn btn-primary" data-save="modal">Save</button>
             </div>
         </div>
