--- a/MoanaSoftwareTrello/Views/Home/EditCard.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/EditCard.cshtml
@@ -22,7 +22,11 @@
                         <input asp-for="Description" type="text" class="form-control" required />
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
-                    @*need assigneed*@
+                    <div class="form-group">
+                        <label asp-for="AsigneeId"></label>
+                        <select asp-for="AsigneeId" class="form-control" asp-items="@ViewBag.authors"></select>
+                        <span asp-validation-for="AsigneeId" class="text-danger"></span>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer justify-content-between">
