--- a/MoanaSoftwareTrello/Views/Home/ajaxReloadColumn.cshtml
+++ b/MoanaSoftwareTrello/Views/Home/ajaxReloadColumn.cshtml
@@ -1,27 +1,12 @@
-﻿@*@for (int j = 0; j < @ViewBag.data.Count; j++)
-{
-
-    <div @ViewBag.attributes class="card" data-order="@ViewBag.data[j].Position" id="@ViewBag.data[j].Id">
-        <a @ViewBag.attributes data-toggle="ajax-modal" data-target="#editCard" data-url="@Url.Action("Edit")/@ViewBag.data[j].Id">
-            <div @ViewBag.attributes class="card-body">
-                <h5 @ViewBag.attributes class="card-title">@ViewBag.data[j].Title</h5>
-                <p @ViewBag.attributes class="card-text">@ViewBag.data[j].Description</p>
-                <a @ViewBag.attributes class="btn btn-warning" data-toggle="ajax-modal" data-target="#editCard" data-url="@Url.Action("Edit")/@ViewBag.data[j].Id">Edit</a>
-            </div>
-        </a>
-    </div>
-}
-
-*@
-
-@for (int j = 0; j < @ViewBag.data.Count; j++)
+﻿@for (int j = 0; j < @ViewBag.data.Count; j++)
 {
 
     <div class="card" data-order="@ViewBag.data[j].Position" id="@ViewBag.data[j].Id">
-        <a data-toggle="ajax-modal" data-target="#editCard" data-url="@Url.Action("Edit")/@ViewBag.data[j].Id">
+        <a data-toggle="ajax-modal" data-target="#showCard" data-url="@Url.Action("showCard")/@ViewBag.data[j].Id">
             <div class="card-body">
                 <h5 class="card-title">@ViewBag.data[j].Title</h5>
                 <p class="card-text">@ViewBag.data[j].Description</p>
+                <a class="btn btn-success" data-toggle="ajax-modal" data-target="#showCard" data-url="@Url.Action("showCard")/@ViewBag.data[j].Id">Show</a>
                 <a class="btn btn-warning" data-toggle="ajax-modal" data-target="#editCard" data-url="@Url.Action("Edit")/@ViewBag.data[j].Id">Edit</a>
             </div>
         </a>
